add background image

--- a/shortener/templates/base.html
+++ b/shortener/templates/base.html
@@ -30,8 +30,8 @@
 
 
       <!-- Background Image -->
-      {% comment %} <div class="bg-img" style="background-image: url({% static 'index/img/url_shortener_png.png' %}); height: 550px;">
-        <div class="overlay"></div> {% endcomment %}
+      <div class="bg-img" style="background-image: url({% static 'index/img/url_shortener_png.png' %}); height: 550px;">
+        <div class="overlay"></div>
       </div>
       <!-- /Background Image -->
 
