--- a/shortener/templates/base.html
+++ b/shortener/templates/base.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" type="text/css" href="{% static '/account/allauth/style.css' %}">
+    {% comment %} <link rel="stylesheet" type="text/css" href="{% static '/account/allauth/style.css' %}"> {% endcomment %}
 	  <link type="text/css" rel="stylesheet" href="{% static 'index/css/index.css' %}" />
     <title>Django Url shortener</title>
   </head>
@@ -48,7 +48,7 @@
 
           <!-- Copyright -->
           <div class="footer-copyright text-center green py-3" style="color: #ffffff">
-            Copyright © <a href="{% url 'shortener:create_url' %}">eliusmgani</a>
+            Copyright © <a href="https://www.linkedin.com/in/elius-mgani/">eliusmgani</a>
           </div>
           <!-- Copyright -->
 
