--- a/shortener/templates/shortener/url_detail.html
+++ b/shortener/templates/shortener/url_detail.html
@@ -37,7 +37,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-sm-12 text-center">
-                                <a class="btn btn-info" href="{% url 'shortener:url_list' %}">URL Last</a>
+                                <a class="btn btn-info" href="{% url 'shortener:url_list' %}">URL List</a>
                             </div>
                         </div>
                     </div>
